--- a/Lab_2_NEW.ipynb
+++ b/Lab_2_NEW.ipynb
@@ -1233,9 +1233,9 @@
       "iteration:  5 negative elements:  0\n",
       "Для 5 ітерації ,виконується умова регулярності.Модель регулярна \n",
       "Модель незворотня -   True\n",
-      "Рекурентную називають модель M  яка з ймовірністю в P = 1 при покиданні стану вернеться в цей стан за час t < inf,у майбутньму\n",
+      "Рекурентну називають модель M  яка з ймовірністю в P = 1 при покиданні стану вернеться в цей стан за час t < inf,у майбутньму\n",
       "Кількість рекурентних станів  256\n",
-      "Усі стани моделі рекурентні ,модель рекурентна \n"
+      "Усі стани моделі рекурентні, модель рекурентна \n"
      ]
     }
    ],
